Изменена обработка загрузки по новомй шаблону загрузки и по новой схеме журнал учета кабельной продукции

--- a/src/DataProcessors/ЗагрузкаЖурналУчетаКабельнойПродукции/Forms/Форма/Form.form
+++ b/src/DataProcessors/ЗагрузкаЖурналУчетаКабельнойПродукции/Forms/Форма/Form.form
@@ -172,6 +172,81 @@
     </edit>
     <main>true</main>
   </attributes>
+  <attributes>
+    <name>КабельныеЖурналы</name>
+    <title>
+      <key>ru</key>
+      <value>Кабельные журналы</value>
+    </title>
+    <id>2</id>
+    <valueType>
+      <types>ValueTable</types>
+    </valueType>
+    <view>
+      <common>true</common>
+    </view>
+    <edit>
+      <common>true</common>
+    </edit>
+    <columns>
+      <name>МаркировкаКабеля</name>
+      <title>
+        <key>ru</key>
+        <value>Маркировка кабеля</value>
+      </title>
+      <id>3</id>
+      <valueType>
+        <types>String</types>
+        <stringQualifiers>
+          <length>50</length>
+        </stringQualifiers>
+      </valueType>
+      <view>
+        <common>true</common>
+      </view>
+      <edit>
+        <common>true</common>
+      </edit>
+    </columns>
+    <columns>
+      <name>НомерПроекта</name>
+      <title>
+        <key>ru</key>
+        <value>Номер проекта</value>
+      </title>
+      <id>4</id>
+      <valueType>
+        <types>String</types>
+        <stringQualifiers>
+          <length>50</length>
+        </stringQualifiers>
+      </valueType>
+      <view>
+        <common>true</common>
+      </view>
+      <edit>
+        <common>true</common>
+      </edit>
+    </columns>
+    <columns>
+      <name>Объект</name>
+      <title>
+        <key>ru</key>
+        <value>Объект</value>
+      </title>
+      <id>6</id>
+      <valueType>
+        <types>String</types>
+        <stringQualifiers/>
+      </valueType>
+      <view>
+        <common>true</common>
+      </view>
+      <edit>
+        <common>true</common>
+      </edit>
+    </columns>
+  </attributes>
   <formCommands>
     <name>ЗагрузитьДанные</name>
     <title>
