--- a/src/DataProcessors/РабочееМесто/Forms/Форма/Form.form
+++ b/src/DataProcessors/РабочееМесто/Forms/Форма/Form.form
@@ -1218,6 +1218,36 @@
     <autoCommandBar>
       <name>ОсновныеДанныеКоманднаяПанель</name>
       <id>384</id>
+      <items xsi:type="form:Button">
+        <name>ОсновныеДанныеСоздать</name>
+        <id>426</id>
+        <visible>true</visible>
+        <enabled>true</enabled>
+        <userVisible>
+          <common>true</common>
+        </userVisible>
+        <extendedTooltip>
+          <name>ОсновныеДанныеСоздатьРасширеннаяПодсказка</name>
+          <id>427</id>
+          <visible>true</visible>
+          <enabled>true</enabled>
+          <userVisible>
+            <common>true</common>
+          </userVisible>
+          <type>Label</type>
+          <autoMaxWidth>true</autoMaxWidth>
+          <autoMaxHeight>true</autoMaxHeight>
+          <extInfo xsi:type="form:LabelDecorationExtInfo">
+            <horizontalAlign>Left</horizontalAlign>
+          </extInfo>
+        </extendedTooltip>
+        <commandName>Form.Command.Создать</commandName>
+        <representation>Auto</representation>
+        <autoMaxWidth>true</autoMaxWidth>
+        <autoMaxHeight>true</autoMaxHeight>
+        <placementArea>UserCmds</placementArea>
+        <representationInContextMenu>Auto</representationInContextMenu>
+      </items>
       <visible>true</visible>
       <enabled>true</enabled>
       <userVisible>
