--- a/src/Catalogs/ЖурналыУчетаКабельнойПродукции/Forms/ФормаЭлемента/Form.form
+++ b/src/Catalogs/ЖурналыУчетаКабельнойПродукции/Forms/ФормаЭлемента/Form.form
@@ -657,7 +657,7 @@
         <common>true</common>
       </userVisible>
       <dataPath xsi:type="form:DataPath">
-        <segments>Объект.КабельныеЛинии.ДлинаПроекта</segments>
+        <segments>Объект.КабельныеЛинии.ДлинаПроектная</segments>
       </dataPath>
       <extendedTooltip>
         <name>КабельныеЛинииДлинаПроектаРасширеннаяПодсказка</name>
